2019-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr39339.c,
	  support/regression/tests/gcc-torture-execute-pr41750.c,
	  support/regression/tests/gcc-torture-execute-pr42833.c,
	  support/regression/tests/gcc-torture-execute-pr43236.c,
	  support/regression/tests/gcc-torture-execute-pr44575.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* src/pdk/gen.c:
	  Fix read from signed bit-field.

2019-03-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2630.c,
	  support/regression/tests/bug-2822.c,
	  support/regression/tests/bug-441448.c,
	  support/regression/tests/bug-460010.c,
          support/regression/tests/bug-2712.c,
          support/regression/tests/bug1665511.c,
	  support/regression/tests/bug1757671.c,
	  support/regression/tests/bug1928022.c,
	  support/regression/tests/bug2729218.c,
	  support/regression/tests/bug2817646.c,
	  support/regression/tests/bug2862650.c,
	  support/regression/tests/bug2935162.c,
	  support/regression/tests/bug3027957.c,
	  support/regression/tests/bug3183823.c,
	  support/regression/tests/bug3381400.c,
	  support/regression/tests/bug3424150.c,
	  support/regression/tests/bug3564104.c,
	  support/regression/tests/bugs-1596270-1736867.c,
	  support/regression/tests/gcc-torture-execute-postmod-1.c,
	  support/regression/tests/gcc-torture-execute-pr15262.c,
	  support/regression/tests/gcc-torture-execute-pr15296.c,
	  support/regression/tests/gcc-torture-execute-pr19606.c,
	  support/regression/tests/gcc-torture-execute-pr20527-1.c,
	  support/regression/tests/gcc-torture-execute-pr20601-1.c,
	  support/regression/tests/gcc-torture-execute-pr27073.c,
	  support/regression/tests/gcc-torture-execute-pr27260.c,
	  support/regression/tests/gcc-torture-execute-pr27285.c,
	  support/regression/tests/gcc-torture-execute-pr28982a.c,
	  support/regression/tests/condopptr.c,